--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,8 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Gradle
-        run: |
-          chmod +x gradlew
-          ./gradlew assembleDebug
-
+        run: gradle assembleDebug
+        
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
