Update Gradle plugin syntax and remove compile options

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application' version '8.2.2'
+}
 
 android {
     namespace 'org.google.android.marvin.brailleback'
@@ -10,11 +12,6 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0-modern"
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
