--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,10 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Gradle
-        run: gradle assembleDebug
-        
+        run: |
+          gradle wrapper --gradle-version 8.5
+          ./gradlew assembleDebug
+
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
