--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,34 @@
 plugins {
-    id 'com.android.application' version '8.2.2'
+    id 'com.android.application'
 }
 
 android {
     namespace 'org.google.android.marvin.brailleback'
-    compileSdk 34
+    compileSdk 35 // Поднимаем до актуального для Android 16
 
     defaultConfig {
         applicationId "org.google.android.marvin.brailleback"
         minSdk 26
-        targetSdk 34
+        targetSdk 35
         versionCode 1
-        versionName "1.0-modern"
+        versionName "1.0-original-core"
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+        }
+    }
+    
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+    // Библиотека для поддержки Брайля (упрощенная версия)
+    implementation 'androidx.core:core-ktx:1.12.0'
 }
