--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="BrailleBack Modern"
         android:theme="@android:style/Theme.DeviceDefault"
         android:allowBackup="true"
-        android:supportsRtl="true">
+        android:extractNativeLibs="true">
         
         <activity android:name=".MainActivity"
             android:exported="true">
